--- a/style/modele-style.css
+++ b/style/modele-style.css
@@ -42,6 +42,7 @@ body {
 @media only screen and (max-width: 680px) {
   .card {
     margin-bottom: 20px;
+    margin-left: 15px;
   }
   .headmodels {
     text-align: center;
