--- a/style/modele-darkstyle.css
+++ b/style/modele-darkstyle.css
@@ -51,6 +51,7 @@ p {
 @media only screen and (max-width: 680px) {
   .card {
     margin-bottom: 20px;
+    margin-left:15px;
   }
   .headmodels {
     text-align: center;
