--- a/style/home-darkstyle.css
+++ b/style/home-darkstyle.css
@@ -50,6 +50,9 @@ button.coolStuffBtn:hover {
 }
 .btnLeanrMore {
   background-color: rgb(107, 114, 142);
+  display:block;
+  margin:auto;
+    margin-bottom: 25px;
 }
 .btnLeanrMore:hover {
   background-color: #fff;
@@ -83,5 +86,6 @@ button.coolStuffBtn:hover {
       .btnLearnMore {
     display: block;
     margin: auto;
+        margin-bottom:25px;
   }
 }
